--- a/app/src/main/res/layout/activity_personal.xml
+++ b/app/src/main/res/layout/activity_personal.xml
@@ -45,58 +45,79 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_margin="20dp"
-                    android:text="Formulario de lesion"
+                    android:text="Información Empresa"
                     android:textSize="24sp"
+                    android:textStyle="bold"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
+
                 <LinearLayout
-                    android:id="@+id/linearLayout6"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="20dp"
-                    android:orientation="horizontal"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/linearLayout5">
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_margin="10dp"
+                    android:background="@drawable/border_curverd"
+                    android:backgroundTint="#B7C4E3F1"
+                    android:orientation="vertical">
 
                     <TextView
-                        android:id="@+id/textView6"
-                        android:layout_width="wrap_content"
+                        android:id="@+id/textView10"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:layout_margin="20dp"
+                        android:text="Dueños"
+                        android:textSize="20sp"
+                        android:textStyle="bold" />
 
-                        android:text="Tipo:"
-                        android:textSize="20sp" />
-
-                    <Spinner
-                        android:id="@+id/spinner2"
-                        android:layout_width="wrap_content"
+                    <TextView
+                        android:id="@+id/textView11"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:entries="@array/tipo"
+                        android:layout_margin="20dp"
+                        android:text="Gustavo Marín, colegiado 6216" />
 
-                        android:textAlignment="center" />
+                    <TextView
+                        android:id="@+id/textView9"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="20dp"
+                        android:text="Pablo Cardenal, colegiado 6220" />
                 </LinearLayout>
 
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_margin="10dp"
+                    android:layout_weight="1"
+                    android:background="@drawable/border_curverd"
+                    android:backgroundTint="#B7C4E3F1"
+                    android:orientation="vertical">
 
+                    <TextView
+                        android:id="@+id/textView13"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="20dp"
+                        android:text="Horario"
+                        android:textSize="20sp"
+                        android:textStyle="bold" />
 
-                <Button
-                    android:id="@+id/button2"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="20dp"
-                    android:layout_marginStart="128dp"
-                    android:layout_marginTop="17dp"
-                    android:layout_marginEnd="123dp"
-                    android:backgroundTint="#AEDEF4"
-                    android:text="Crear Rutina"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/linearLayout8" />
+                    <ImageView
+                        android:id="@+id/imageView2"
+                        android:layout_width="match_parent"
+                        android:layout_height="200dp"
+                        android:layout_margin="20dp"
+                        android:layout_weight="1"
+                        app:srcCompat="@drawable/horario_removebg_preview" />
+
+                </LinearLayout>
+
                 <TextView
                     android:id="@+id/textView14"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_margin="300dp"
+                    android:layout_marginLeft="400dp"
+                    android:layout_marginTop="100dp"
                     android:layout_weight="1"
                     android:text=" "
                     android:textSize="20sp" />
