--- a/app/src/main/res/layout/activity_formulario.xml
+++ b/app/src/main/res/layout/activity_formulario.xml
@@ -208,7 +208,8 @@
                     android:id="@+id/textView14"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_margin="100dp"
+                    android:layout_marginLeft="400dp"
+                    android:layout_marginTop="100dp"
                     android:layout_weight="1"
                     android:text=" "
                     android:textSize="20sp" />
