--- a/app/src/main/res/layout/activity_formulario.xml
+++ b/app/src/main/res/layout/activity_formulario.xml
@@ -174,7 +174,7 @@
                         android:layout_marginTop="17dp"
                         android:layout_marginEnd="123dp"
                         android:backgroundTint="#AEDEF4"
-                        android:text="Confirmar Datos"
+                        android:text="Crear Rutina"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/linearLayout8" />
@@ -188,7 +188,7 @@
                         android:layout_marginTop="17dp"
                         android:layout_marginEnd="123dp"
                         android:backgroundTint="#AEDEF4"
-                        android:text="Crear Rutina"
+                        android:text="Enviar Rutina"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/linearLayout8" />
