--- a/app/src/main/res/layout/activity_formulario.xml
+++ b/app/src/main/res/layout/activity_formulario.xml
@@ -188,6 +188,7 @@
                         android:layout_marginTop="17dp"
                         android:layout_marginEnd="123dp"
                         android:backgroundTint="#AEDEF4"
+                        android:enabled="false"
                         android:text="Enviar Rutina"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
